add assignment-2 task-1 solution

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -94,9 +94,9 @@
     "]\n",
     "\n",
     "with open(all_paths[0], 'r') as f:\n",
-    "    # YOUR CODE HERE: Use the readline() or readlines() method to read the .csv file into a variable\n",
-    "    \n",
-    "    # YOUR CODE HERE: Iterate through the variable using a for loop and print each row for inspection"
+    "  lines = f.readlines()\n",
+    "  for line in lines:\n",
+    "    print(line.strip())"
    ]
   },
   {
