--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "_svDiRkdIwiT"
    },
@@ -330,18 +330,24 @@
    "outputs": [],
    "source": [
     "# Define your function `detect_problems` here\n",
-    "\n",
     "def detect_problems(file_path):\n",
-    "  #YOUR CODE HERE: Use patient_summary() to get the means and check_zeros() to check for zeros in the means\n",
-    "\n",
-    "  return"
+    "  means = patient_summary(file_path,'mean')\n",
+    "  return check_zeros(means)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Test out your code here\n",
     "# Your output for the first file should be False\n",
