Add mean and max in q2, run all files in q3

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "id": "3TYo0-1SDLrd"
    },
@@ -243,6 +243,51 @@
     "# Your output for the first file should be 60\n",
     "data_min = patient_summary(all_paths[0], 'min')\n",
     "print(len(data_min))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.45  5.425 6.1   5.9   5.55  6.225 5.975 6.65  6.625 6.525 6.775 5.8\n",
+      " 6.225 5.75  5.225 6.3   6.55  5.7   5.85  6.55  5.775 5.825 6.175 6.1\n",
+      " 5.8   6.425 6.05  6.025 6.175 6.55  6.175 6.35  6.725 6.125 7.075 5.725\n",
+      " 5.925 6.15  6.075 5.75  5.975 5.725 6.3   5.9   6.75  5.925 7.225 6.15\n",
+      " 5.95  6.275 5.7   6.1   6.825 5.975 6.725 5.7   6.25  6.4   7.05  5.9  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test mean \n",
+    "data_mean = patient_summary(all_paths[0], 'mean')\n",
+    "print(data_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18. 18. 19. 17. 17. 18. 17. 20. 17. 18. 18. 18. 17. 16. 17. 18. 19. 19.\n",
+      " 17. 19. 19. 16. 17. 15. 17. 17. 18. 17. 20. 17. 16. 19. 15. 15. 19. 17.\n",
+      " 16. 17. 19. 16. 18. 19. 16. 19. 18. 16. 19. 15. 16. 18. 14. 20. 17. 15.\n",
+      " 17. 16. 17. 19. 18. 18.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test max\n",
+    "data_max = patient_summary(all_paths[0], 'max')\n",
+    "print(data_max)"
    ]
   },
   {
@@ -337,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +397,43 @@
     "# Test out your code here\n",
     "# Your output for the first file should be False\n",
     "print(detect_problems(all_paths[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test all the files \n",
+    "for x in all_paths:\n",
+    "    print(detect_problems(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Out of the 12 tested files, three files (3, 8, and 11) contained at least one patient with a mean inflammation score of 0, indicating potential data-entry errors or anomalous records in those datasets. The other nine files showed no mean-zero patients."
    ]
   },
   {
